# getmyid

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
src/: async_client.rs  client.rs  error.rs  lib.rs  types.rs
